Bug 1186061 patch 2 - Disable compositor thread animation of transforms when backface-visibility is hidden.  r=mattwoodrow  approval-mozilla-aurora=ritu

We don't currently have a mechanism for rerendering when the front/back
flips, so we should disable running such animations on the compositor
thread for now until we do.

Bug 1186204 covers reenabling.

The reftest fails without the patch (showing a blue almost-square
rectangle), and passes with the patch.

The use of reftest-no-flush (added in patch 1) is needed to achieve the
failure without the patch, because the flushWindow() function in
reftest-content.js calls getBoundingClientRect() to flush rendering,
which has the side-effect of flushing style updates that have been
suppressed on the main thread while we're running an animation off the
main thread, which in turn covers up the bug.

--HG--
rename : layout/reftests/transform-3d/animate-preserve3d-child.html => layout/reftests/transform-3d/animate-backface-hidden.html
extra : transplant_source : %BCzm%E0X%F2q%F0C%AFXPjJ%24%A0%F2%97%D4J